Fix several layout issues:
- Net impact indicator was too narrow due to conflicting layout styles
- Fix results panel being too wide due to bootstrap styles. This was
causing side to side shifting after final panel was shown
- Update verbiage to match mockups

--- a/src/styles/_includes.scss
+++ b/src/styles/_includes.scss
@@ -15,6 +15,7 @@ $green-to: #A8CF45;
 $blue-from: #C6EBFC;
 $blue-to: #73CCF2;
 $dark-blue: #017ab0;
+$muted-gray: #757575;
 
 @mixin linear-gradient($from, $to, $from_percent: 20%, $to_percent: 100%) {
   background: $to;
